Converted player peeing scenes, displayneed and the pee at home scene to the new format

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="scripts/yourhome.js"></script>
     <script src="scripts/objects.js"></script>
     <script src="scripts/actions.js"></script>
+    <script src="scripts/bladder.js"></script>
     <title>Melissa Explains it All</title>
 </head>
 <body>
@@ -1327,209 +1328,6 @@ CHANGES BY Forget_About_Me
         c("indepee", "Continue...");
     }
 
-    //
-    //
-    //
-    //TODO lose control when bursting on the way
-    function indepee() {
-        gottagoflag = 0;
-        //TODO the locstack aren't compeltely correct
-        if (haveherpurse) {
-            haveherpurse = 0;
-        } else if (locstack[0] === "thehome" ||
-            locstack[0] === "thebedroom" ||
-            locstack[0] === "pickup" ||
-            locstack[0] === "fuckher6") {
-            s(girlname + " heads for the bathroom, leaving the door slightly ajar.");
-        } else if (locstack[0] === "themakeout" ||
-            locstack[0] === "thehottub" ||
-            locstack[0] === "driveout" ||
-            locstack[0] === "thehome" ||
-            locstack[0] === "thebedroom" ||
-            locstack[0] === "thewalk" || locstack[0] === "theyard" || locstack[0] === "thebeach") {
-            s(girlname + " heads for the restroom and then realizes:");
-        } else s(girlname + " runs toward the restroom.");
-
-        if (locstack[0] === "thebar" && randomchoice(rrlockedthresh)) {
-            bathroomlocked();
-            if (rrlockedflag > 3) {
-                s(girltalk + "It's <b><i>still</i></b> fucking locked!");
-            } else if (rrlockedflag > 2) {
-                s(girltalk + "It's <b><i>still</i></b> locked!  What's taking her so long?");
-            } else if (rrlockedflag) {
-                s(girltalk + "It's still locked!");
-            } else {
-                s(girltalk + "It was locked!");
-            }
-            rrlockedflag++;
-            displayneed();
-        } else if (locstack[0] === "theclub" && randomchoice(rrlinethresh)) {
-            bathroomlocked();
-            if (rrlockedflag) {
-                s(girltalk + "The line's not getting any smaller.");
-            } else {
-                s(girltalk + "There was a huge line.");
-            }
-            rrlockedflag++;
-            displayneed();
-        } else if (locstack[0] === "dodance" && randomchoice(rrlinethresh)) {
-            bathroomlocked();
-            if (rrlockedflag > 3) {
-                s(girltalk + "The line's still really fucking long.");
-            } else if (rrlockedflag > 2) {
-                s(girltalk + "I think the line's getting longer...");
-            } else if (rrlockedflag) {
-                s(girltalk + "The line's still really really long.");
-            } else {
-                s(girltalk + "There was a huge line.");
-            }
-            rrlockedflag++;
-            displayneed();
-        } else if (locstack[0] === "themakeout") {
-            s("There is no restroom out here in the boonies.");
-            displayneed();
-        } else if (locstack[0] === "driveout") {
-            s("There is no restroom in the car.");
-            displayneed();
-        } else if (locstack[0] === "thewalk" || locstack[0] === "theyard" || locstack[0] === "thebeach" || locstack[0] === "thehottub") {
-            s("There is no restroom around.");
-            displayneed();
-            interpbladder();
-        } else if (locstack[0] === "thehome" ||
-            locstack[0] === "thebedroom" ||
-            locstack[0] === "fuckher6") {
-            s("You hear a quick clatter and a gasp as she lifts the toilet lid.  She starts to pee violently, a loud hiss accompanying the splash of the urine in the bowl.  You imagine being in there with her as she relieves her bladder.");
-            flushdrank();
-        } else if (locstack[0] === "pickup") {
-            s("You hear a quick clatter of the toilet lid, and then the hissing and splashing of her urine in the bowl.");
-            flushdrank();
-        } else if (locstack[0] === "solobar") {
-            if (bladder > bladlose - 25)
-                s(barpeeprivate[randcounter]);
-            else
-                s(barpeeprivate2[randcounter]);
-            incrandom();
-            //TODO check validity of these attraction
-            attraction -= 2;
-            flushdrank();
-        } else {
-            if (bladder > bladlose - 25)
-                s(peeprivate[randcounter]);
-            else
-                s(peeprivate2[randcounter]);
-            incrandom();
-            //TODO check validity of these attraction
-            attraction -= 2;
-            flushdrank();
-        }
-        if (bladder >= bladlose - 25 && locstack[0] !== "thehottub") begtoilet();
-        else {
-            c(locstack[0], "Continue...");
-        }
-    }
-
-    //TODO lose control when bursting on the way
-    //TODO add a chance of her denying you
-    function youpee() {
-        gottagoflag = 0;
-        if (locstack[0] === "yourhome") {
-            s("You head to your bathroom, not bothering to close the door.")
-        } else if (locstack[0] === "thehome" ||
-            locstack[0] === "thebedroom" || locstack[0] === "pickup") {
-            s("YOU: Can I use your toilet?");
-            s(girlname + " nods.");
-            s(girltalk + "It's the third door on your right.");
-            s("You head to her bathroom, leaving the door slightly ajar.")
-        } else s("You walk toward the restroom.");
-
-        if (locstack[0] === "thebar" && randomchoice(rrlockedthresh)) {
-            youbathroomlocked();
-            if (yrrlockedflag > 3) {
-                s("YOU: It's <b><i>still</i></b> fucking locked!");
-            } else if (yrrlockedflag > 2) {
-                s("YOU: It's <b><i>still</i></b> locked!  What's taking so long?");
-            } else if (yrrlockedflag) {
-                s("YOU: It's still locked!");
-            } else {
-                s("YOU: It was locked!");
-            }
-            yrrlockedflag++;
-            displayneed();
-        } else if (locstack[0] === "theclub" && randomchoice(rrlinethresh)) {
-            youbathroomlocked();
-            if (yrrlockedflag) {
-                s("YOU: The line's not getting any smaller.");
-            } else {
-                s("YOU: There was a huge line.");
-            }
-            yrrlockedflag++;
-            displayneed();
-        } else if (locstack[0] === "dodance" && randomchoice(rrlinethresh)) {
-            youbathroomlocked();
-            if (yrrlockedflag > 3) {
-                s("YOU: The line's still really fucking long.");
-            } else if (yrrlockedflag > 2) {
-                s("YOU: I think the line's getting longer...");
-            } else if (yrrlockedflag) {
-                s("YOU: The line's still really really long.");
-            } else {
-                s("YOU: There was a huge line.");
-            }
-            yrrlockedflag++;
-            displayneed();
-        } else if (locstack[0] === "thehome" ||
-            locstack[0] === "thebedroom" ||
-            locstack[0] === "fuckher6" || locstack[0] === "pickup") {
-            s("You quickly lift the toilet lid and seat before pulling yourself out and you start to pee loudly.  You imagine her being in there with you watching you relieve yourself.");
-            flushyourdrank();
-        } else if (locstack[0] === "yourhome") {
-            s("You stand in front of your toilet as you pull your dick out and start peeing, you urine splashes in the bowl.");
-            flushyourdrank();
-        } else if (locstack[0] === "darkbar" || locstack[0] === "darkmovie" || locstack[0] === "darkclub") {
-            //TODO potentially cycle between quotes
-            if (yourbladder > yourbladlose - 25)
-                s(youpeeprivate[0]);
-            else
-                s(youpeeprivate2[0]);
-            flushyourdrank();
-        } else {
-            if (yourbladder > yourbladlose - 25)
-                s(youpeeprivate[randcounter]);
-            else
-                s(youpeeprivate2[randcounter]);
-            incrandom();
-            flushyourdrank();
-        }
-        if (yourbladder >= yourbladlose - 25 && locstack[0] !== "thehottub") youbegtoilet();
-        else {
-            c(locstack[0], "Continue...");
-        }
-    }
-
-    function bathroomlocked() {
-        if (bladder > blademer)
-            s("She quickly runs back looking shaken.");
-        else if (bladder > bladneed)
-            s("Momentarily, she returns looking uncomfortable.");
-        else
-            s("She returns looking unfulfilled.");
-    }
-
-    function youbathroomlocked() {
-        if (locstack[0] === "thebar")
-            s("You try the door but it won't budge.");
-        else {
-            s("You arrive in the hallway to see a huge line of other men waiting for the toilet.");
-            s("There is no way you are going to wait for that!")
-        }
-        if (yourbladder > yourblademer)
-            s("You groan in frustration, your hand sneaks downwards to your crotch giving it a quick message before heading back.");
-        else if (yourbladder > yourbladneed)
-            s("You shift your weight uncomfortable before walking back with a sigh.");
-        else
-            s("You sigh before walking back to " + girlname);
-    }
-
 
     //TODO combine the if statements from dink/beer/coktail/soda
     function drinknow() {
@@ -2377,64 +2175,7 @@ CHANGES BY Forget_About_Me
         incrandom();
     }
 
-    //  Displayneed function prints a relatively random
-    //  indication of her level of pee urgency.
-    //TODO maybe implement a displayneed for you?
-    //TODO clean this up
-    function displayneed() {
-        if (locstack[0] !== "solobar") {
-            if (bladder >= bladlose) {
-                if (locstack[0] === "themakeout" || locstack[0] === "driveout" ||
-                    locstack[0] === "drivearound" || locstack[0] === "domovie" ||
-                    locstack[0] === "thebed" || fuckingnow > 0)
-                    s(sitneedlose[randcounter]);
-                else if (locstack[0] === "thehottub")
-                    s(tubneedlose[randcounter]);
-                else
-                    s(needlose[randcounter]);
-                showedneed = 1;
-            } else if (bladder > blademer) {
-                if (locstack[0] === "themakeout" || locstack[0] === "driveout" ||
-                    locstack[0] === "drivearound" || locstack[0] === "domovie" ||
-                    locstack[0] === "thebed" || fuckingnow > 0)
-                    s(sitneedemer[randcounter]);
-                else if (locstack[0] === "thehottub")
-                    s(tubneedemer[randcounter]);
-                else
-                    s(needemer[randcounter]);
-                showedneed = 1;
-            } else if (bladder > bladneed) {
-                if (locstack[0] === "themakeout" || locstack[0] === "driveout" ||
-                    locstack[0] === "drivearound" || locstack[0] === "domovie" ||
-                    locstack[0] === "thebed" || fuckingnow > 0)
-                    s(sitneedneed[randcounter]);
-                else if (locstack[0] === "thehottub")
-                    s(tubneedneed[randcounter]);
-                else
-                    s(needneed[randcounter]);
-                showedneed = 1;
-            } else if (bladder > bladurge) {
-                if (locstack[0] === "themakeout" || locstack[0] === "driveout" ||
-                    locstack[0] === "drivearound" || locstack[0] === "domovie" ||
-                    locstack[0] === "thebed" || fuckingnow > 0)
-                    s(sitneedurge[randcounter]);
-                else if (locstack[0] === "thehottub")
-                    s(tubneedurge[randcounter]);
-                else
-                    s(needurge[randcounter]);
-            }
-            incrandom();
-        } else {  //  solobar only
-            if (bladder >= bladlose) {
-                s(sitneedlose[randcounter]);
-            } else if (bladder > blademer) {
-                s(sitneedemer[randcounter]);
-            } else if (bladder > bladneed) {
-                s(sitneedneed[randcounter]);
-            } else s(sitneedneed[randcounter]);
-            incrandom();
-        }
-    }
+
 
     //TODO Add different quote for holding and not holding
     function displayyourneed() {
@@ -2469,15 +2210,6 @@ CHANGES BY Forget_About_Me
             c("peeoutside", "Suggest she pee outside.");
         c(locstack[0], "Stand by helplessly.");
     }
-
-    function youbegtoilet() {
-        s("<b>YOU: </b> I really can't hold it any longer I got to go!");
-        s(girltalk + "Do you have any ideas?");
-        if (shotglass > 0) c("ypeeshot", "Pee in the shot glass.");
-        if (vase > 0) c("ypeevase", "Pee in the vase.");
-        c(locstack[0], "I have no ideas.");
-    }
-
 
 
     //TODO add extra options like pee outside
