--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="scripts/objects.js"></script>
     <script src="scripts/actions.js"></script>
     <script src="scripts/bladder.js"></script>
+    <script src="scripts/clothes.js"></script>
     <title>Melissa Explains it All</title>
 </head>
 <body>
@@ -2102,52 +2103,6 @@ CHANGES BY Forget_About_Me
         changevenueflag = 0;
     }
 
-
-    // DisplayGottaVoc function prints a quasi-random vocalization from "+girlname+"
-    // indication her sincere hope to find a bathroom soon.
-    function displaygottavoc(curtext, index) {
-        let textchoice = [];
-        if (askholditcounter > 0 && bladder > bladurge && randomchoice(3)) {
-            textchoice.push(girltalk + "" + wanthold[randcounter]);
-        }
-
-        if (bladder >= bladneed && !brokeice) {
-            textchoice.push(girlname + " looks embarassed.");
-            textchoice.push(girltalk + "Jesus, I'm sorry.");
-        }
-
-        if (locstack[0] === "driveout") {
-            if (bladder >= bladlose - 10) {
-                textchoice.push(girltalk + "" + carlosequotes[randcounter]);
-            } else if (bladder >= blademer) {
-                textchoice.push(girltalk + "" + caremerquotes[randcounter]);
-            } else if (bladder >= bladneed) {
-                textchoice.push(girltalk + "" + carneedquotes[randcounter]);
-            } else if (bladder >= bladurge) {
-                textchoice.push(girltalk + "" + carurgequotes[randcounter]);
-            } else {
-            }
-        } else {
-            if (bladder >= bladlose - 10) {
-                textchoice.push(girltalk + "" + losequotes[randcounter]);
-            } else if (bladder >= blademer) {
-                textchoice.push(girltalk + "" + emerquotes[randcounter]);
-            } else if (bladder >= bladneed) {
-                textchoice.push(girltalk + "" + needquotes[randcounter]);
-            } else if (bladder >= bladurge) {
-                textchoice.push(girltalk + "" + urgequotes[randcounter]);
-            }
-        }
-        if (bladder >= bladneed) gottagoflag = 1;
-        if (bladder >= bladurge) brokeice = 1;
-        incrandom();
-        if (textchoice.length === 1){
-            curtext.splice(index, 0, textchoice[0]);
-        } else {
-            textchoice.forEach(text => {curtext.splice(index, 0, text); index++});
-        }
-        return curtext;
-    }
 
     //  increment the random number counter.
     function incrandom() {
