--- a/index.html
+++ b/index.html
@@ -350,6 +350,7 @@ CHANGES BY Forget_About_Me
     // Indicates new venue change
     let didintro = 0; // Flag for having done introduction
     let onphone = 0; // Flag for being on the phone with her
+    let shopping = 0;// Flag for being in the shop
     let seenmovie = 0; // Flag for having seen a movie already
     let beenbar = 0;  //  Been to the bar already
     let beenclub = 0; // Been to the club already
