Started on changing pickup

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         }
     </style>
     <meta charset="UTF-8">
+<!-- TODO sort out imports?-->
     <script src="scripts/main.js"></script>
     <script src="scripts/quotes.js"></script>
     <script src="scripts/animation.js"></script>
@@ -26,6 +27,7 @@
     <script src="scripts/actions.js"></script>
     <script src="scripts/bladder.js"></script>
     <script src="scripts/clothes.js"></script>
+    <script src="scripts/herhome.js"></script>
     <title>Melissa Explains it All</title>
 </head>
 <body>
