fixed appearance, pickup finished, needs to be tested and cleaned up

--- a/index.html
+++ b/index.html
@@ -4438,7 +4438,8 @@ CHANGES BY Forget_About_Me
                 "You visualize her grabbing her crotch through her skirt the moment she sees the toilet and struggling to control it long enough to get her skirt off",
                 "You can imagine her finally relaxing over the toilet, pee pouring from her crotch for nearly a full minute.",
                 "You can imagine her in front of the toilet, too desperate to even close the door before emptying her overfilled bladder",
-                "You can only guess at her frenzied antics in front of the toilet as her struggling pee hole is finally allowed to relax and her full bladder empties into the toilet.", "You imagine her struggles to control herself just long enough to get her clothing out of the way before she empties her overtaxed bladder into the toilet."];
+                "You can only guess at her frenzied antics in front of the toilet as her struggling pee hole is finally allowed to relax and her full bladder empties into the toilet.",
+                "You imagine her struggles to control herself just long enough to get her clothing out of the way before she empties her overtaxed bladder into the toilet."];
 
             peeprivate2 = ["You are left to imagine the her finding a stall, carefully closing the door and hiking up her skirt to use the toilet in private.",
                 "You are left alone with only your imagination of her releasing her pent up pee into the toilet.",
