Fixed preventpee bein called if she doesn't have to go during pickup. Implemented her calling you on the phone and moved the peephone quotes to shepee.JSON

--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@ CHANGES BY Forget_About_Me
 *Changed the way pictures are added
 *Changed with how much cocktails increase max-tummy
 *Tweaked chance of finding key to hopefully be a bit more favourable
-*Fixed bug that reset the flirt counter when trying to leave a venue while she has to pee
+*Fixed bug that reset the flirt counter when trying to leave
+*Fixed preventpee being called if she doesn't have to go during pickup
 */
 
     //TODO potentially clean up if statements with multiple locations
