Created framework for pop-up inventory/backpack

--- a/index.html
+++ b/index.html
@@ -3847,8 +3847,14 @@ CHANGES BY Forget_About_Me
 
 </script>
 <!--TODO fix text flicker when start is loaded with picture-->
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="unused/stylechange.css">
 <div class="fullscreen">
+    <div id="backpackitems">
+        <div id="backpackcontent">
+            <span id="closebackpack">&times;</span>
+            <p>Testing shit</p>
+        </div>
+    </div>
     <div id="titlebar">
         <div id="credits">Game Engine 3.2a by drw</div>
         <div id="version">VER 4.2: June 24, 2020</div>
@@ -3870,6 +3876,7 @@ CHANGES BY Forget_About_Me
             </ul>
             <pre style="padding-top: 10vh;padding-left:30vw;"><br>  ((<br>  -))<br>  /\) <br> ( |)<br>   \ \<br>   _/ )<br>  //-/<br>  ||<br>  d/<br></pre>
         </div>
+        <a href="javascript:backpack()"><img id="backpack" src="icons/backpack.png" alt="Picture of girl" class="pic"></a>
     </div>
     <div id="statsp">
         <table id="stats-bar">
