Implemented design for backpack and basic functionality

--- a/index.html
+++ b/index.html
@@ -3853,6 +3853,15 @@ CHANGES BY Forget_About_Me
         <div id="backpackcontent">
             <span id="closebackpack">&times;</span>
             <p>Testing shit</p>
+            <div id="item-text">
+
+            </div>
+            <div class="btn-group">
+                <button onclick="selectitem('Soda')" class="itembtn" id="Soda">Soda</button>
+                <button onclick="selectitem('Water')" class="itembtn" id="Water">Water</button>
+                <button onclick="selectitem('Cocktail')" class="itembtn" id="Cocktail">Cocktail</button>
+                <button onclick="selectitem('Champagne')" class="itembtn" id="Champagne">Champagne</button>
+            </div>
         </div>
     </div>
     <div id="titlebar">
