Backpack now correctly shows which items you have

--- a/index.html
+++ b/index.html
@@ -3807,14 +3807,14 @@ CHANGES BY Forget_About_Me
 <!--TODO fix text flicker when start is loaded with picture-->
 <link rel="stylesheet" type="text/css" href="unused/stylechange.css">
 <div class="fullscreen">
-    <div id="backpackitems">
+    <div id="backpack-cnt">
         <div id="backpackcontent">
             <span id="closebackpack">&times;</span>
-            <p>Testing shit</p>
+            <p>This is your backpack</p>
             <div id="item-text">
 
             </div>
-            <div class="btn-group">
+            <div class="btn-group" id="backpackitems">
                 <button onclick="selectitem('Soda')" class="itembtn" id="Soda">Soda</button>
                 <button onclick="selectitem('Water')" class="itembtn" id="Water">Water</button>
                 <button onclick="selectitem('Cocktail')" class="itembtn" id="Cocktail">Cocktail</button>
