Option added to turn off playerbladder. Some bug fixes on images

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="scripts/clothes.js"></script>
     <script src="scripts/herhome.js"></script>
     <script src="scripts/drive.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <title>Melissa Explains it All</title>
 </head>
 <body>
@@ -188,7 +189,6 @@ CHANGES BY Forget_About_Me
     let enableascii = 1; // 0 = Disable ascii art display
     let enablehide = 0; // 1 = Hide screen
 
-    const enabledebug = 1; // 1 = Allow selection of debug mode
     let showstats = 1; // 1 = Show her bladder state, etc.
     // Girl Selection Parameters
     let withgirl = 1; // 0 = you have escaped your date
