--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="scripts/objects.js"></script>
     <script src="scripts/actions.js"></script>
     <script src="scripts/bladder.js"></script>
+    <script src="scripts/yourbladder.js"></script>
     <script src="scripts/clothes.js"></script>
     <script src="scripts/herhome.js"></script>
     <script src="scripts/drive.js"></script>
